--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Adam Pasi + Up-and-coming new comics TBA January <br />
   coming soon...<br />
   <br />
   <div class="month">April 25, 2020 —</div>
-  coming soon...<br />
+  Maggie Maye, Adam Pasi<br />
   </p>
   <hr/>
   <p>
