--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="pad-h_valentine_schlegel_je_dors_je_travaillemd read-mode logged-out book">
     <nav id="nav-left">
-        <a href="resources/html/about.html" class="button screen-only">About</a>
+        <a href="about.html" class="button screen-only">About</a>
 
     </nav>
     <nav id="nav-right">
