--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Broken Zipper Comedy</title>
 
 </head>
-<body class="pad-h_valentine_schlegel_je_dors_je_travaillemd read-mode logged-out book">
+<body class="">
     <nav id="nav-left">
-        <a href="about.html" class="button screen-only">About</a>
+        <a href="/about.html" class="button screen-only">About</a>
 
     </nav>
     <nav id="nav-right">
@@ -50,8 +50,8 @@
 <hr/>
 <p><strong><em>C A L E N D A R</em></strong> <br /><br />
   <hr/>
-Comedy @ The Growler Guys  <br />
-3739 SW Macadam Ave., Portland, OR  <br />
+<div class="clubs">COMEDY @ THE GROWLER GUYS</div>  <br />
+3739 SW Bond Ave, Portland, OR  <br />
 <div class="time">* First Saturday of each month at 8 PM *</div>  <br />
 <div class="time">Sign up on Google Docs posted at 9 AM, First Saturday of each month on Portland Comics <a herf="https://www.facebook.com/groups/123315924393120/">HERE</a>.</div> <br/>
 
@@ -65,8 +65,8 @@ coming soon...<br />
 Adam Pasi + Up-and-coming new comics TBA January <br />
 <br />
 <div class="month">— — </div><br />
-  Comedy @ The Gap<br />
-  6835 SW Macadam Ave., Portland, OR<br />
+  <div class="clubs">COMEDY @ THE GAP</div> <br />
+  6835 SW Macadam Ave, Portland, OR<br />
   <br />
   <div class="month">November  23, 2019 —</div>
   Susan Rice, Andrew Sleighter, Chris Mejia, Kirsten Kuppenbender<br />
@@ -85,7 +85,7 @@ Adam Pasi + Up-and-coming new comics TBA January <br />
   coming soon...<br />
   <br />
   <div class="month">April 25, 2020 —</div>
-  Maggie Maye, Adam Pasi<br />
+  coming soon...<br />
   </p>
   <hr/>
   <p>
