--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <title>Broken Zipper Comedy</title>
 
 </head>
-<body class="pad-h_valentine_schlegel_je_dors_je_travaillemd read-mode logged-out book">
+<body class="">
     <nav id="nav-left">
         <a href="index.html" class="button screen-only">Home</a>
 
@@ -48,6 +48,7 @@
 <hr/>
 <p>Broken Zipper Comedy is Portland, Oregon based comedy!</p>
   <br>
+  <p><img src="resources/images/bananaOops.jpg" alt="Smiley Face"/>  </p>
   <br>
   <div class="bio">
   – <a href="mailto:brokenzippercomedy@gmail.com?subject=Hahahahahahaha">Contact</a><br>
@@ -225,18 +226,7 @@
 
 
         <div class="popup-wrapper hidden">
-            <div class="popup">
-              <form action="/accounts/login" method="post">
-                <input type="hidden" name="csrfmiddlewaretoken" value="Mu5batSCSYkVSId5DkMFHzFmwp1dFsY6"/>
-                <label for="id_username">Username</label>
-                <input maxlength="254" type="text" id="id_username" name="username"/>
-                <label for="id_password">Password</label>
-                <input type="password" name="password" id="id_password"/>
-
-                <input type="submit" class="submit" value="Login"/>
-                <input type="hidden" name="next" value="/w/H_Valentine_Schlegel_je_dors_je_travaille.md"/>
-              </form>
-            </div>
+          
         </div>
 
 
