--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="">
     <nav id="nav-left">
-        <a href="/about.html" class="button screen-only">About</a>
+        <a href="about.html" class="button screen-only">About</a>
 
     </nav>
     <nav id="nav-right">
