--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p><img src="resources/images/BZ.jpg" alt="Smiley Face"/>  </p>
 <hr/>
 <hr/>
-<p><strong><em>C A L E N D A R</em></strong> <br /><br />
+                <p><div class="month"><strong><em>C A L E N D A R</em></strong></div> <br /><br />
   <hr/>
 <div class="clubs">COMEDY @ THE GROWLER GUYS</div>  <br />
 3739 SW Bond Ave, Portland, OR  <br />
