--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p><img src="resources/images/BZ.jpg" alt="Smiley Face"/>  </p>
 <hr/>
 <hr/>
-  <p><strong><em>C A L E N D A R</em></strong> <br /><br />
+  <p><strong style="color:#DA70D6;">C * A * L * E * N * D * A * R</strong> <br /><br />
   <hr/>
 <div class="clubs">COMEDY @ THE GROWLER GUYS</div>  <br />
 3739 SW Bond Ave, Portland, OR  <br />
