--- a/index.html
+++ b/index.html
@@ -53,39 +53,51 @@
 <div class="clubs">COMEDY @ THE GROWLER GUYS</div>  <br />
 3739 SW Bond Ave, Portland, OR  <br />
 <div class="time">* First Saturday of each month at 8 PM *</div>  <br />
-<div class="time">Sign up on Google Docs posted at 9 AM, First Saturday of each month on Portland Comics <a herf="https://www.facebook.com/groups/123315924393120/">HERE</a>.</div> <br/>
+<div class="time">Sign up on Google Docs posted at 9 AM, First Saturday of each month on Broken Zipper <a herf="https://www.facebook.com/groups/123315924393120/" target="_blank">HERE</a>.</div> <br/>
 
 <div class="month">November 16, 2019 —</div>
-Sam Miller, Jamie Edwards, Rochelle Cote, Jamie Carbone<br />
+Sam Miller, Brandon Lyons, Rochelle Cote, Jamie Carbone<br />
 <br />
+
 <div class="month">December 21, 2019 —</div>
 coming soon...<br />
 <br />
+
 <div class="month">January 18, 2020 —</div>
-Adam Pasi + Up-and-coming new comics TBA January <br />
+Adam Pasi + Up-and-coming new comics TBA January <br />
 <br />
+
 <div class="month">— — </div><br />
   <div class="clubs">COMEDY @ THE GAP</div> <br />
   6835 SW Macadam Ave, Portland, OR<br />
-  <br />
-  <div class="month">November  23, 2019 —</div>
+  <div class="time">* Last Saturday of the month from December 2019 through June 2020 at 8 PM *</div><br />
+
+
+  <div class="month">November  23, 2019 —</div>
   Susan Rice, Andrew Sleighter, Chris Mejia, Kirsten Kuppenbender<br />
   <br />
+
   <div class="month">December 28,2019 —</div>
   Gabriel Rutledge, Amanda Arnold, Chris Johnson<br />
-  <div class="time">* Last Saturday of the month from December 2019 through June 2020 at 8 PM *</div><br>
+  <br />
 
   <div class="month">January 25, 2020 —</div>
   coming soon...<br />
   <br />
+
   <div class="month">February 29, 2020 —</div>
   coming soon...<br />
   <br />
+
   <div class="month">March 28, 2020 —</div>
   coming soon...<br />
   <br />
+
   <div class="month">April 25, 2020 —</div>
-  coming soon...<br />
+  Maggie Maye, Adam Pasi<br />
+
+
+
   </p>
   <hr/>
   <p>
@@ -153,23 +165,19 @@ Adam Pasi + Up-and-coming new comics TBA January <br />
     hr {
         height: 17px;
     }
-
-
     .page:nth-child(odd) .header,
     .page:nth-child(odd) .main-section,
     .page:nth-child(odd) .footer {
     }
-
     .page:nth-child(even) .header,
     .page:nth-child(even) .main-section,
     .page:nth-child(even) .footer {
         padding-left: 12mm;
         padding-right: 12mm;
     }
-
     section.header:before,
     section.header:after {
-        font-family: "Nasa";
+        font-family: orator-std, monospace;
         font-size: 9pt;
         line-height: 10pt;
         position: absolute;
@@ -180,7 +188,6 @@ Adam Pasi + Up-and-coming new comics TBA January <br />
     section.header:after {
         right: 0mm;
     }
-
 /* FOOTER */
     section.footer:after {
         content: "";
